--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Docker Build and push
         run: |
           docker build -t k8s:latest .
-          docker tag k8s:latest *YOURDOCKERUSERNAME*/k8s:latest
+          docker tag k8s:latest aasanusi/k8s:latest
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker push aasanusi/k8s:latest
         env:
